# qwenasr.cpp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  checkpoints.sh  convert.py  models.sh  quantize.sh
docs/: ARCHITECTURE.md
examples/: client.sh  output.txt  server.sh  transcribe.cmd  transcribe.sh
src/: audio-enc.h  audio-io.h  audio-mel.h  audio-resample.h  audio-tower.h  backend.h  bpe.h  conv-stem.h  debug.h  detok-stream.h  gguf-weights.h  graph-arena.h  kv-cache.h  lang-map.h  philox.h  pipeline-asr.cpp  pipeline-asr.h  prompt-asr.h  qa-error.h  qwen3-decoder.h  qwenasr.cpp  qwenasr.h  sampling.h  thinker-forward.h  thinker-weights.h  timer.h  utf8.h  wav.h  weight-ctx.h
tests/: abi-c.c  debug-asr-cossim.py  debug-asr-cossim.sh
tools/: asr-server.cpp  quantize.cpp  qwenasr-feat.cpp  qwenasr-thinker.cpp  qwenasr-transcribe.cpp  version.cmake
